# agentspec

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.operator  Makefile  README.md  go.mod  go.sum  init-spec.md  mkdocs.yml
DECISIONS/: 001-parser-choice.md  002-plugin-sandbox.md  003-state-backend.md
dashboards/: agentspec-overview.json
docs/: index.md
docs-tools/: requirements.txt
examples/: README.md
gap-analysis/: README.md  architecture.md  bugs.md  executive-summary.md  feature-inventory.md  missing-features.md  new-features.md  remediation-roadmap.md  risks-and-unknowns.md  scorecard.md
integration_tests/: apply_test.go  auth_test.go  benchmark_test.go  budget_test.go  cli_doc_test.go  compile_test.go  controlflow_test.go  delegation_test.go  determinism_test.go  docexample_test.go  docker_test.go  environment_test.go  eval_test.go  export_test.go  fallback_test.go  framework_compile_test.go  frontend_test.go  golden_test.go  graph_test.go  guardrail_test.go  idempotent_test.go  import_test.go  kubernetes_test.go  loop_test.go  metrics_new_test.go  packaging_test.go  pipeline_exec_test.go  pipeline_test.go  plugin_test.go  policy_test.go  provider_test.go  registry_test.go  runtime_test.go  sdk_test.go  secrets_test.go  security_test.go  session_save_test.go  session_test.go  state_backend_test.go  state_test.go  (+6 more)
saad/: generate_agentspec_docs.py
sdk/python/: pyproject.toml
sdk/python/agentspec/: __init__.py  client.py  streaming.py
spec/: ir.schema.json  spec.md
(+662 files in other folders)
